# QOTD-serverless

./: .gitignore  handler.py  package-lock.json  package.json  pyproject.toml
