[tool.poetry]
name = "qotd-app-backend"
version = "0.1.0"
description = ""
authors = ["Kenneth Chow <kennethjchow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.16.63"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
